# lmms-engine-mini

./: .gitignore  README.md  pyproject.toml
docs/: data_prep.md  train.md
examples/data_preparation_sample_code/: download.py  kini_dpo.yaml
examples/sample_json_data/: synvo_engine.json
examples/sample_jsonl_data/voice_assis/: voice_assis.jsonl
examples/sample_preference_data/: rlaif-v.jsonl
src/lmms_engine/datasets/: __init__.py  base_dataset.py  config.py  datasetmixin.py  duplex_dataset.py  factory.py  grpo_dataset.py  vision_audio_dataset.py  vision_dataset.py
src/lmms_engine/datasets/collator/: __init__.py  duplex_collator.py  preference_collator.py
src/lmms_engine/datasets/processor/: __init__.py  aero_omni_processor.py  aero_processor.py  config.py  factory.py  kino_processor.py  llava_processor.py  qwen2_5_vl_processor.py  qwen2_vl_processor.py
src/lmms_engine/eval/: caller.py
src/lmms_engine/launch/: cli.py  pipeline.py
src/lmms_engine/models/: __init__.py  factory.py
src/lmms_engine/models/aero/: __init__.py  configuration_aero.py  modeling_aero.py  processing_aero.py
src/lmms_engine/models/aero_omni/: __init__.py  configuration_aero_omni.py  modeling_aero_omni.py  processing_aero_omni.py
src/lmms_engine/models/kernels/: monkey_patch.py  qwen2_5_vl_liger.py  qwen2_liger.py
src/lmms_engine/models/kino/: __init__.py  configuration_kino.py  modeling_kino.py
src/lmms_engine/models/mistral3_audio/: __init__.py  configuration_mistral3_audio.py  modeling_mistral3_audio.py  processing_mistral3_audio.py
src/lmms_engine/models/qwen2_5_vl_audio/: configuration_qwen2_5_vl.py  modeling_qwen2_5_vl.py  processing_qwen2_5_vl.py
src/lmms_engine/models/qwen_vl_audio/: configuration_qwen_vl_audio.py  processing_qwen_vl_audio.py
src/lmms_engine/train/: __init__.py  accelerate_megatron_trainer.py  base_trainer.py  config.py  hf_trainer.py
src/lmms_engine/train/custom/: dpo_trainer.py  llava_trainer.py  muon.py
src/lmms_engine/train/reward_func/: __init__.py
src/lmms_engine/utils/: __init__.py  data_utils.py  train_utils.py
src/synvo_engine/datasets/: __init__.py  base_dataset.py  config.py  factory.py  grpo_dataset.py  preference_dataset.py  vision_audio_dataset.py  vision_dataset.py
src/synvo_engine/datasets/collator/: __init__.py  grpo_collator.py  preference_collator.py  vision_collator.py
src/synvo_engine/datasets/processor/: __init__.py  config.py  factory.py
src/synvo_engine/eval/: __init__.py
src/synvo_engine/launch/: controller.py  pipeline.py
src/synvo_engine/models/: __init__.py  config.py  factory.py  modeling_qwen.py  modelling_qwen.py
src/synvo_engine/models/kernels/: __init__.py  monkey_patch.py  qwen2_5_vl_liger.py  utils.py
src/synvo_engine/models/kino/: configuration_kino.py  modeling_kino.py  modeling_llava_onevision_audio.py  processing_kino.py
src/synvo_engine/models/llava_onevision/: configuration_llava_onevision.py  (+1 more)
src/synvo_engine/protocol/: __init__.py  data_proto.py  synvo_proto.py
src/synvo_engine/train/: __init__.py  accelerate_megatron_trainer.py  base_trainer.py  config.py  factory.py  hf_trainer.py
src/synvo_engine/utils/: data_utils.py  logging_utils.py  train_utils.py
test/dataset/: test_data_proto.py  test_preference_data.py  test_vision_audio_data.py  test_vision_data.py
test/models/: test_import_models.py
test/utils/: test_utils.py
tools/: check_dataset_yaml.py  configure_envs.sh  convert_maas_to_hf.py  create_json_dataset.py  merge_fsdp.py  prepare_qwen_2_5_kino.py
tools/check_data/: precompute_tokens.py  precompute_tokens_cloud.py
tools/create_data/: musiccaps_gpt4o.py
tools/prepare_init_weight/: prepare_aero_omni.py  prepare_kino_asr.py  prepare_kino_lora.py  prepare_mistral3_audio.py
(+38 files in other folders)
